[tool.poetry]
name = "threesixty"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.0"
django = "*"
django-service-urls = "*"
psycopg2-binary = "*"
waitress = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]
isort = "*"
pytest = "*"
pytest-django = "*"
pycodestyle = "*"
coverage = "*"
codecov = "*"
pydocstyle = "^6.3.0"
flake8 = "^4.0.1"
black = "^22.12"
mypy = "^1.0"
django-stubs = "^1.14.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
