[tool.poetry]
name = "threesixty"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10.0"
django = "*"
django-service-urls = "*"
psycopg2-binary = "*"
waitress = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]
isort = "*"
pytest = "*"
pytest-django = "*"
pycodestyle = "*"
coverage = "*"
codecov = "*"
pydocstyle = "^6.3.0"
flake8 = "^4.0.1"
black = "^23.3"
mypy = "^1.3"
django-stubs = "^4.2.1"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
